## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002 James Su
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

MAINTAINERCLEANFILES	= Makefile.in

INST_ICONS		= Amharic.png   \
			  Array30.png   \
			  CangJie.png   \
			  Cantonese.png \
			  Dayi.png      \
			  Erbi.png      \
			  Erbi-QS.png   \
			  EZ.png        \
			  Jyutping.png  \
			  Simplex.png   \
			  Wubi.png      \
			  Ziranma.png   \
			  ZhuYin.png    \
			  HIRAGANA.png  \
			  KATAKANA.png  \
			  Nippon.png    \
			  Hangul.png    \
			  Hanja.png     \
			  Yawerty.png

EXTRA_DIST		= $(INST_ICONS)

icondir			= $(SCIM_ICONDIR)
icon_DATA		= $(INST_ICONS)

